# Factory-service-simulation-software

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
config/: factory_default.json  small_factory.json
include/: config_loader.h  reporter.h  simulation.h
scripts/: build.sh  demo.sh
src/: adjuster.cpp  config_loader.cpp  machine.cpp  main.cpp  reporter.cpp  service_manager.cpp  simulation.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_config.cpp
